--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "static-site-webpack-habr",
+  "name": "Lottery",
   "version": "2.0.0",
-  "description": "HTML template",
+  "description": "Lottery layouts",
   "main": "src/index.js",
   "scripts": {
     "dev": "webpack --mode development",
