--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "html-webpack-plugin": "^4.3.0",
+    "iscroll": "^5.2.0",
+    "jquery-drawer": "^3.2.2",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
