--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "flatpickr": "^4.6.6",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
@@ -23,6 +24,7 @@
     "html-webpack-plugin": "^4.3.0",
     "iscroll": "^5.2.0",
     "jquery-drawer": "^3.2.2",
+    "jquery-mask-plugin": "^1.14.16",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
